--- a/config.toml
+++ b/config.toml
@@ -49,6 +49,26 @@ paginate     = 10
     tag      = "tags"
     series   = "series"
 
+[[params.social]]
+  name = "twitter"
+  url  = "https://twitter.com/"
+
+[[params.social]]
+  name = "email"
+  url  = "mailto:nobody@example.com"
+
+[[params.social]]
+  name = "github"
+  url  = "https://github.com/"
+
+[[params.social]]
+  name = "linkedin"
+  url  = "https://www.linkedin.com/"
+
+[[params.social]]
+  name = "stackoverflow"
+  url  = "https://www.stackoverflow.com/"
+
 [languages]
   [languages.en]
     title = "Codecowboy.io"
