--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,7 @@ paginate     = 10
   name = "codecowboy"
 
 [taxonomies]
-    category = "blog"
+    category = "categories"
     tag      = "tags"
     series   = "series"
 
