--- a/config.toml
+++ b/config.toml
@@ -68,7 +68,7 @@ paginate     = 10
 [languages]
   [languages.en]
     title = "Codecowboy.io"
-    subtitle = "A simple theme for Hugo"
+    subtitle = "Ramblings of a developer"
     keywords = ""
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
     readOtherPosts = "Read other posts"
