--- a/config.toml
+++ b/config.toml
@@ -91,3 +91,8 @@ paginate     = 10
     identifier = "about"
     name       = "About"
     url        = "about/"
+
+  [[menu.main]]
+    identifier = "tags"
+    name       = "Tags"
+    url        = "tags/"
