--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,6 @@ paginate     = 10
   dateformShort   = "Jan 2"
   dateformNum     = "2006-01-02"
   dateformNumTime = "2006-01-02 15:04"
-  defaultTheme = "dark"
 
   # Subtitle for home
   homeSubtitle = "Ramblings of a developer"
@@ -24,6 +23,9 @@ paginate     = 10
   description = "Technology blog for codecowboy.io"
   keywords = "homepage, blog, technology"
   images = [""]
+
+  PygmentsCodeFences = true
+  PygmentsStyle = "monokai"
 
 [params.footer]
   trademark = true
