--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ paginate     = 10
   dateformNumTime = "2006-01-02 15:04"
 
   # Subtitle for home
-  homeSubtitle = "Ramblings of a developer"
+  homeSubtitle = "A source of information for Automation, Development and Kubernetes topics."
 
   # Set disableReadOtherPosts to true in order to hide the links to other posts.
   disableReadOtherPosts = false
