--- a/config.toml
+++ b/config.toml
@@ -88,7 +88,7 @@ paginate     = 10
 
   # And you can even create generic menu
   [[menu.main]]
-    identifier = "automation ..."
+    identifier = "automation"
     name       = "Automation"
     url        = "automation/"
 
