--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,7 @@ pluralizelisttitles = false
   # Metadata mostly used in document's head
   description = "Latest technology information for Kubernetes, Automation and Developers"
   keywords = "blog, technology, kubernetes, automation, dev, developer"
-  images = ["https://codecowboy.io/images/svk-pic.jpg"]
+  images = ["https://codecowboy.io/images/cowboy.jpg"]
 
   defaultTheme = "dark" 
   PygmentsCodeFences = true
