--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 #[submodule "themes/hello-friend-ng"]
 #	path = themes/hello-friend-ng
 #	url = https://github.com/rhazdon/hugo-theme-hello-friend-ng.git
+[submodule "themes/themes/hugo-clarity"]
+	path = themes/themes/hugo-clarity
+	url = https://github.com/chipzoller/hugo-clarity
+[submodule "themes/hugo-clarity"]
+	path = themes/hugo-clarity
+	url = https://github.com/chipzoller/hugo-clarity
