--- a/hugo.toml
+++ b/hugo.toml
@@ -12,6 +12,9 @@ pluralizelisttitles = false
   dateformShort   = "Jan 2"
   dateformNum     = "2006-01-02"
   dateformNumTime = "2006-01-02 15:04"
+  [homeInfoParams]
+    Title = "foo"
+    Content = "bar"
 
 
   # Subtitle for home
