--- a/hugo.toml
+++ b/hugo.toml
@@ -14,7 +14,15 @@ pluralizelisttitles = false
   dateformNumTime = "2006-01-02 15:04"
   [homeInfoParams]
     Title = "foo"
-    Content = "bar"
+    Content= """>
+          👋 Welcome to demo page of Hugo's theme PaperMod!
+    
+          - **PaperMod**  is designed to be clean and simple but fast and responsive theme with useful feature-set that enhances UX.
+    
+          - Feel free to show your support by giving us a star 🌟 on GitHub and sharing with your friends and social media .
+    
+          - PaperMod is based on theme [Paper](https://github.com/nanxiaobei/hugo-paper/tree/4330c8b12aa48bfdecbcad6ad66145f679a430b3).
+   """ 
 
 
   # Subtitle for home
