--- a/hugo.yaml
+++ b/hugo.yaml
@@ -83,22 +83,16 @@ languages:
         logoHomeLink: "/"
 
     menu:
-      - identifier: "automation"
-        name: "Automation"
-        url: "automation/"
-      - identifier: "development"
-        name: "Development"
+      -  name: "Automation"
+         url: "automation/"
+      - name: "Development"
         url: "development/"
-      - identifier: "kubernetes"
-        name: "Kubernetes"
+      - name: "Kubernetes"
         url: "kubernetes/"
-      - identifier: "tags"
-        name: "Tags"
+      - name: "Tags"
         url: "tags/"
-      - identifier: "about"
-        name: "About"
+      - name: "About"
         url: "about/"
-      - identifier: "presentations"
-        name: "Presentations & Media"
+      - name: "Presentations & Media"
         url: "presos/"
 
