--- a/hugo.yaml
+++ b/hugo.yaml
@@ -83,16 +83,17 @@ languages:
         logoHomeLink: "/"
 
     menu:
-      -  name: "Automation"
-         url: "automation/"
-      - name: "Development"
-        url: "development/"
-      - name: "Kubernetes"
-        url: "kubernetes/"
-      - name: "Tags"
-        url: "tags/"
-      - name: "About"
-        url: "about/"
-      - name: "Presentations & Media"
-        url: "presos/"
+      main:
+        - name: "Automation"
+          url: "automation/"
+        - name: "Development"
+          url: "development/"
+        - name: "Kubernetes"
+          url: "kubernetes/"
+        - name: "Tags"
+          url: "tags/"
+        - name: "About"
+          url: "about/"
+        - name: "Presentations & Media"
+          url: "presos/"
 
