--- a/hugo.yaml
+++ b/hugo.yaml
@@ -28,13 +28,7 @@ params:
   homeInfoParams:
     Title: "codecowboy.io"
     Content: |
-      👋 Welcome to demo page of Hugo's theme PaperMod!
-
-      - **PaperMod**  is designed to be clean and simple but fast and responsive theme with useful feature-set that enhances UX.
-
-      - Feel free to show your support by giving us a star 🌟 on GitHub and sharing with your friends and social media .
-
-      - PaperMod is based on theme [Paper](https://github.com/nanxiaobei/hugo-paper/tree/4330c8b12aa48bfdecbcad6ad66145f679a430b3).
+      👋 Welcome to **codecowboy.io**, a site that's devoted to technology and things that interest me. I have a lot on automation and kubernetes, and other topics as I become interested.
 
   footer:
     trademark: true
