--- a/hugo.yaml
+++ b/hugo.yaml
@@ -30,15 +30,15 @@ params:
     Content: |
       👋 Welcome to **codecowboy.io**, a site that's devoted to technology and things that interest me. I have a lot on automation and kubernetes, and other topics as I become interested.
 
-  footer:
-    trademark: true
-    rss: true
-    copyright: true
-    author: true
-    topText: []
-    bottomText:
-      - "Powered by <a href=\"http://gohugo.io\">Hugo</a>"
-      - "Made with &#10084; by codecowboy"
+#  footer:
+#    trademark: true
+#    rss: true
+#    copyright: true
+#    author: true
+#    topText: []
+#    bottomText:
+#      - "Powered by <a href=\"http://gohugo.io\">Hugo</a>"
+#      - "Made with &#10084; by codecowboy"
 
   favicon:
     color:
