--- a/hugo.yaml
+++ b/hugo.yaml
@@ -39,29 +39,14 @@ params:
       url: "https://github.com/codecowboydotio"
     - name: "linkedin"
       url: "https://www.linkedin.com/in/scottv1/"
-#  footer:
-#    trademark: true
-#    rss: true
-#    copyright: true
-#    author: true
-#    topText: []
-#    bottomText:
-#      - "Powered by <a href=\"http://gohugo.io\">Hugo</a>"
-#      - "Made with &#10084; by codecowboy"
 
-  favicon:
-    color:
-      mask: "#1b1c1d"
-      msapplication: "#1b1c1d"
-      theme: "#1b1c1d"
+#  favicon:
+#    color:
+#      mask: "#1b1c1d"
+#      msapplication: "#1b1c1d"
+#      theme: "#1b1c1d"
 
-  author:
-    name: "codecowboy"
 
-taxonomies:
-  category: "categories"
-  tag: "tags"
-  series: "series"
 
 
 languages:
@@ -91,3 +76,7 @@ languages:
         - name: "Presentations & Media"
           url: "presos/"
 
+    taxonomies:
+      category: "categories"
+      tag: "tags"
+      series: "series"
