--- a/hugo.yaml
+++ b/hugo.yaml
@@ -11,10 +11,11 @@ paginate: 10
 mainsections: ["posts", "automation", "development", "kubernetes", "presos"]
 
 params:
+  author: codecowboy
   defaultTheme: light
   disableThemeToggle: false
-  author: codecowboy
   description: "Latest technology information for Kubernetes, Automation and Developers"
+  env: production
   DateFormat: "January 2, 2006"
   ShowCodeCopyButtons: true
   ShowPostNavLinks: true
