--- a/hugo.yaml
+++ b/hugo.yaml
@@ -4,6 +4,7 @@ languageCode: "en-us"
 theme:
   - "PaperMod"
   - "hugo-notice"
+pluralizelisttitles: false
 # theme:
 #   - "hello-friend-ng"
 #   - "hugo-notice"
@@ -17,7 +18,6 @@ params:
   description: "Latest technology information for Kubernetes, Automation and Developers"
   env: production
   DateFormat: "January 2, 2006"
-  pluralizelisttitles = false
   ShowBreadCrumbs: true
   ShowCodeCopyButtons: true
   ShowPostNavLinks: true
